Fixed broken alignment

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header {
 }
 
 .intro-chunk {
-  padding: 32px 16px;
+  padding: 96px 24px 64px;
   max-width: 424px;
 }
 
@@ -48,7 +48,7 @@ main {
 .card {
   background-color: hsl(0deg 0% 100%);
   border-bottom: 8px solid hsl(0deg 0% 60%);
-  padding: 16px;
+  padding: 24px;
 }
 
 .indented-heading {
@@ -59,6 +59,6 @@ main {
 
   font-size: 1.5rem;
 
-  padding: 12px 16px;
-  margin: 0 0 0 -16px;
+  padding: 16px 32px;
+  margin: 0 0 0 -32px;
 }
